# web-scraper

caesar-cipher/: pyproject.toml
caesar-cipher/caesar_cipher/: caesar_cipher.py
caesar-cipher/tests/: test_caesar_cipher.py
caesar-cipher1/: pyproject.toml
caesar-cipher1/tests/: test_caesar_cipher1.py
testingfile/: pyproject.toml
testingfile/testingfile/: con.ipynb  test_3.py  test_4.py  test_rol.py  test_rol_2.py
testingfile/tests/: test_testingfile.py
web-scraper/: README.md  pyproject.toml
web-scraper/tests/: test_scraper.py
web-scraper/web_scraper/: scraper.py
