[tool.poetry]
name = "testingfile"
version = "0.1.0"
description = ""
authors = ["bashar adel taamneh <bashartaamneh55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.9b0"
flake8 = "^3.9.2"
jupyterlab = "^3.1.18"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
